# AlturaProt

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
benchmark_results/: cargo_audit_current_20260623.json  defense_artifacts_manifest.json  defense_bench_advanced_codex_20260621.json  defense_bench_advanced_codex_20260621_v2.json  defense_bench_advanced_deterministic_20260621.json  defense_bench_advanced_deterministic_20260621_v2.json  defense_bench_all_deterministic_20260621_absolute_form_host_guard.json  defense_bench_all_deterministic_20260621_admin_guard.json  defense_bench_all_deterministic_20260621_downstream_keepalive_disabled.json  defense_bench_all_deterministic_20260621_event_log_flush.json  defense_bench_all_deterministic_20260621_event_log_rotation.json  defense_bench_all_deterministic_20260621_event_log_rotation_all.json  defense_bench_all_deterministic_20260621_forwarded_header_sanitization.json  defense_bench_all_deterministic_20260621_framing_guard.json  defense_bench_all_deterministic_20260621_guardrails.json  defense_bench_all_deterministic_20260621_header_count.json  defense_bench_all_deterministic_20260621_header_timeout.json  defense_bench_all_deterministic_20260621_host_guard.json  defense_bench_all_deterministic_20260621_inflight_guard.json  defense_bench_all_deterministic_20260621_initial_framing_precheck.json  defense_bench_all_deterministic_20260621_listen_backlog.json  defense_bench_all_deterministic_20260621_log_suppression.json  (+356 more)
(+69 files in other folders)
